--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,5 @@
 {
-  "root": "frontend",
-  "buildCommand": "npm run build",
-  "outputDirectory": ".next",
-  "installCommand": "npm install"
+  "projectSettings": {
+    "rootDirectory": "frontend"
+  }
 }
