--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,8 @@
 {
-  "projectSettings": {
-    "rootDirectory": "frontend"
+  "buildCommand": "npm run build",
+  "outputDirectory": ".next",
+  "env": {
+    "NEXT_PUBLIC_API_URL": "https://illustration-assgn.onrender.com"
   }
 }
+
