Update backend API URL to new Render instance

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "env": {
-    "NEXT_PUBLIC_API_URL": "https://illustration-assgn.onrender.com"
+    "NEXT_PUBLIC_API_URL": "https://illustration-assgn-1.onrender.com"
   }
 }
 
