--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,8 +7,11 @@ numpy==1.24.3
 opencv-python==4.9.0.80
 torch==2.1.2
 torchvision==0.16.2
-diffusers==0.28.0
+diffusers==0.25.0
 transformers==4.36.2
+huggingface_hub==0.20.0
+accelerate==0.25.0
+safetensors==0.4.1
 facenet-pytorch==2.5.0
 insightface==0.7.3
 onnxruntime==1.17.0
