--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,7 +4,7 @@ python-multipart==0.0.6
 pydantic==2.5.3
 pillow==10.1.0
 numpy==1.24.3
-opencv-python==4.9.0.80
+opencv-python-headless==4.9.0.80
 torch==2.1.2
 torchvision==0.16.2
 diffusers==0.25.0
@@ -12,7 +12,6 @@ transformers==4.36.2
 huggingface_hub==0.20.0
 accelerate==0.25.0
 safetensors==0.4.1
-facenet-pytorch==2.5.0
 insightface==0.7.3
 onnxruntime==1.17.0
 boto3==1.34.5
